extensions/istio-service-mesh/k8s-resources/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: claims-api-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: claims-api-vs
spec:
  hosts:
  - "*"
  gateways:
  - claims-api-gateway
  http:
  - match:
    - uri:
        exact: /api/v1/claims
    route:
    - destination:
        host: claims-api
        port:
          number: 9080
